// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batching: api calls (one request for 1 & 2, one for 3) 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@1.txt": null,
        "i18n://en-us@2.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@3.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`custom render function: api calls 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@1.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@2.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@3.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@4.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`custom render function: loading 1`] = `
<div>
  loading
  <hr />
  LOADING
</div>
`;

exports[`custom render function: missing 1`] = `
<div>
  error
  <hr />
  <div
    data-details={
      Object {
        "message": "Missing result for node: i18n://en-us@3.txt",
        "responseText": undefined,
        "status": 1404,
      }
    }
  >
    Error
  </div>
</div>
`;

exports[`custom render function: network error 1`] = `
<div>
  error
  <hr />
  <div
    data-details={
      Object {
        "message": "Djedi API error for request: POST /djedi/load_many
RequestData sent: {
  \\"i18n://en-us@2.txt\\": null
}
Response: undefined
Error: Network error",
        "responseText": "",
        "status": -1,
      }
    }
  >
    Error
  </div>
</div>
`;

exports[`custom render function: status error 1`] = `
<div>
  error
  <hr />
  <div
    data-details={
      Object {
        "message": "Djedi API error for request: POST /djedi/load_many
RequestData sent: {
  \\"i18n://en-us@1.txt\\": null
}
Response: 500 <mock.statusText>
Error: Unexpected response status code. Got 500 but expected 200 <= status < 400.",
        "responseText": "<h1>Server error 500</h1>",
        "status": 500,
      }
    }
  >
    Error
  </div>
</div>
`;

exports[`custom render function: with value 1`] = `
<div>
  success
  <hr />
  <article>
    <span
      data-i18n="en-us@4"
    >
      returned value
    </span>
  </article>
</div>
`;

exports[`default values are dedented: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@first.txt": "Lorem ipsum dolor sit amet consectetur adipiscing elit tempor id, hendrerit euismod iaculis convallis ante tincidunt tempus bibendum metus, torquent ac egestas integer erat pharetra vehicula senectus.",
        "i18n://en-us@second.txt": "Lorem ipsum dolor sit amet consectetur adipiscing elit tempor id,
hendrerit euismod iaculis convallis ante tincidunt tempus bibendum
metus, torquent ac egestas integer erat pharetra vehicula senectus.",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`default values are dedented: with value 1`] = `
<div>
  <span
    data-i18n="en-us@first"
  >
    first
  </span>
  <span
    data-i18n="en-us@second"
  >
    second
  </span>
</div>
`;

exports[`edge case: if node.value is missing somehow, it doesn’t crash 1`] = `
<span
  data-i18n="en-us@test"
>
  
</span>
`;

exports[`edit=false: with value 1`] = `"test"`;

exports[`interpolations: passing values to backend: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@1.txt": "Hello, ,Bob,!",
        "i18n://en-us@2.txt": "Hello, {user}!",
        "i18n://en-us@3.txt": "Hello, [user]!",
        "i18n://en-us@4.txt": "Hello, {user}!",
        "i18n://en-us@5.txt": "Hello, [user]!",
        "i18n://en-us@6.txt": "Hello,
{user}!",
        "i18n://en-us@7.txt": "Hello,
[user]!",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`interpolations: passing values to backend: console.error (for uri \`1\`) 1`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`children\` of type \`array\` supplied to \`NodeInterpolationMistake\`, expected \`string\`.
    in NodeInterpolationMistake",
  ],
]
`;

exports[`interpolations: rendering values: rendered 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "Hello Bob!
Hello Bob!
Number: 3.141592653589793
Number: 3.141592653589793
Formatted number: 3.14
Formatted number: 3.14
Date: Wed Jun 27 2018 02:00:00 GMT+0200 (CEST)
Date: Wed Jun 27 2018 02:00:00 GMT+0200 (CEST)
hasOwnProperty: Asking for trouble
hasOwnProperty: Asking for trouble
undefined: undefined
undefined: undefined
null: null
null: null
Unusual key: slash
Unusual key: slash
Whitespace in key not interpolated: {a b}
Whitespace in key not interpolated: [a b]
Delimiter in key not interpolated: {a{b}
Delimiter in key not interpolated: {a}b}
Delimiter in key not interpolated: [a[b]
Delimiter in key not interpolated: [a]b]
Empty key not interpolated: {}
Empty key not interpolated: []
edit not interpolated: {edit}
edit not interpolated: [edit]
children not interpolated: {children}
children not interpolated: [children]
toString not interpolated: {toString}
toString not interpolated: [toString]
Unknown key left alone: {unknown}
Unknown key left alone: [unknown]
Escaped: &#x7b;name&#x7d;
Escaped: &#x5b;name&#x5d;
Double brackets OK: {Bob}
Double brackets OK: [Bob]
Double brackets OK: [Bob]
Double brackets OK: {Bob}",
    }
  }
  data-i18n="en-us@test"
/>
`;

exports[`it allows changing the default/children if also changing the uri: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@first.txt": "first",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@second.txt": "second",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it allows changing the default/children if also changing the uri: render 1`] = `
<span
  data-i18n="en-us@first"
>
  first
</span>
`;

exports[`it allows changing the default/children if also changing the uri: render 2`] = `
<span
  data-i18n="en-us@second"
>
  second
</span>
`;

exports[`it fetches again after changing the uri prop (but not other props): api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@first.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@second.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it fetches again after changing the uri prop (but not other props): first render 1`] = `
<span
  data-i18n="en-us@first"
>
  first
</span>
`;

exports[`it fetches again after changing the uri prop (but not other props): second render 1`] = `
<span
  data-i18n="en-us@second"
>
  second
</span>
`;

exports[`it fetches again after changing the uri prop (but not other props): third render (same uri, no edit) 1`] = `"second"`;

exports[`it handles error status codes: error 1`] = `"Failed to fetch content 😞 (500)"`;

exports[`it handles missing nodes in response: missing 1`] = `"Failed to fetch content 😞 (1404)"`;

exports[`it handles rejected requests: error 1`] = `"Failed to fetch content 😞 (-1)"`;

exports[`it handles window.DJEDI_NODES: before render 1`] = `Object {}`;

exports[`it handles window.DJEDI_NODES: render 1`] = `
Object {
  "i18n://en-us@changing1.txt": undefined,
  "i18n://en-us@loneRemoved.txt": "loneRemoved",
  "i18n://en-us@removed.txt": undefined,
}
`;

exports[`it handles window.DJEDI_NODES: render 2`] = `
Object {
  "i18n://en-us@changing1.txt": undefined,
  "i18n://en-us@changing2.txt": undefined,
  "i18n://en-us@removed.txt": undefined,
}
`;

exports[`it handles window.DJEDI_NODES: render 3`] = `
Object {
  "i18n://en-us@changing1.txt": undefined,
  "i18n://en-us@changing3.txt": undefined,
  "i18n://en-us@removed.txt": undefined,
}
`;

exports[`it handles window.DJEDI_NODES: unmounted 1`] = `Object {}`;

exports[`it renders loading and then the node: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it renders loading and then the node: loading 1`] = `"Loading…"`;

exports[`it renders loading and then the node: window.DJEDI_NODES 1`] = `
Object {
  "i18n://en-us@test.txt": undefined,
}
`;

exports[`it renders loading and then the node: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  returned text
</span>
`;

exports[`it renders synchronously if the node is already in cache: api call 1`] = `
Array [
  Array [
    "/djedi/load_by_prefix",
    Object {
      "body": Array [
        "home/",
      ],
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it renders synchronously if the node is already in cache: browser 1`] = `
<span
  data-i18n="en-us@home/intro"
>
  Welcome to our amazing website!
</span>
`;

exports[`it renders synchronously if the node is already in cache: loadByPrefix result 1`] = `
Object {
  "i18n://en-us@home/intro.txt": "Welcome to our amazing website!",
}
`;

exports[`it renders synchronously if the node is already in cache: with value 1`] = `
<span
  data-i18n="en-us@home/intro"
>
  Welcome to our amazing website!
</span>
`;

exports[`it treats node values as HTML: with value 1`] = `
<div>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "A <a href=\\"http://example.com\\">link</a>.",
      }
    }
    data-i18n="en-us@first"
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "A &amp; B",
      }
    }
    data-i18n="en-us@second"
  />
</div>
`;

exports[`it warns about rendering nodes with different defaults: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "default",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it warns about rendering nodes with different defaults: console.warn 1`] = `
Array [
  Array [
    "djedi-react: Rendering a node with with a different default value. That default will be ignored.",
    Object {
      "next": "other default",
      "prev": "default",
      "uri": "i18n://en-us@test.txt",
    },
  ],
  Array [
    "djedi-react: Rendering a node with with a different default value. That default will be ignored.",
    Object {
      "next": undefined,
      "prev": "default",
      "uri": "i18n://en-us@test.txt",
    },
  ],
]
`;

exports[`it warns about rendering nodes with different defaults: window.DJEDI_NODES 1`] = `
Object {
  "i18n://en-us@test.txt": "default",
}
`;

exports[`it warns if changing the default/children: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "first",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it warns if changing the default/children: console.error 1`] = `
Array [
  Array [
    "djedi-react: Changing the default value of a node is not supported.",
    Object {
      "next": "second",
      "prev": "first",
    },
  ],
]
`;

exports[`it warns if changing the default/children: first render 1`] = `
<span
  data-i18n="en-us@test"
>
  test value
</span>
`;

exports[`it warns if changing the default/children: second render (same as first render) 1`] = `
<span
  data-i18n="en-us@test"
>
  test value
</span>
`;

exports[`it warns when passing a non-string as default/children: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "A ,[object Object]",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it warns when passing a non-string as default/children: console.error 1`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`children\` of type \`array\` supplied to \`NodeChildrenMistake\`, expected \`string\`.
    in NodeChildrenMistake",
  ],
]
`;

exports[`it warns when passing a non-string as default/children: loading 1`] = `"Loading…"`;

exports[`it warns when passing a non-string as default/children: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  returned text
</span>
`;

exports[`the md tag ignores interpolations and warns about them: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "Hello, !",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`the md tag ignores interpolations and warns about them: console.warn 1`] = `
Array [
  Array [
    "djedi-react: Using \`\${foo}\` in a node default value is an anti-pattern: it won't work if the user edits the node. For consistency, your interpolations will be ignored. Did you mean to use \`{foo}\` (without the \`$\`) or \`[foo]\`?",
  ],
]
`;

exports[`the md tag ignores interpolations and warns about them: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  test
</span>
`;

exports[`using the md tag: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "# A heading

Some text with a [link](http://example.com)

> Blockquote

    function codeBlock() {
      return \\"with indentation\\"
    }",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`using the md tag: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  test
</span>
`;
